--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Wasmer
         uses: wasmerio/setup-wasmer@v2
+      - run: |
+          wasmer whoami --token=${{ secrets.WASMER_CIUSER_PROD_TOKEN }}
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -29,10 +31,9 @@ jobs:
       - name: Set up virtual env
         run: |
           python -m venv .env
-          source .env/bin/activate
       - name: Install Flask
         run: |
-          pip install Flask
+          pip install --target ./.env/lib/python3.12/site-packages Flask
       # - name: Deploy app to wasmer.wtf
       #   run: wasmer deploy --registry="https://registry.wasmer.wtf/graphql" --token=${{ secrets.WASMER_CIUSER_DEV_TOKEN }} --publish-package --non-interactive --no-wait --no-persist-id --owner wasmer-tests
       #   continue-on-error: true
